# Calculator

./: CMakeLists.txt  README.md  calculator.cpp  compile_commands.json  test-calculator.cpp
.trunk/: trunk.yaml
.trunk/configs/: .clang-format  .clang-tidy
inc/: calculator.h
